# deffybotrs

./: .gitignore  Cargo.toml
data/assets/: index.html
data/locales/: en-US.json  ja.json  th.json  zh.json
deffy-bot/: Cargo.toml
deffy-bot-encryption/: Cargo.toml
deffy-bot-encryption/src/: lib.rs
deffy-bot-http/: Cargo.toml
deffy-bot-http/src/: lib.rs
deffy-bot-http/src/routes/: mod.rs  patreon_webhook.rs
deffy-bot-http/src/routes/api/: mod.rs
deffy-bot-localization/: Cargo.toml
deffy-bot-localization/src/: manager.rs
deffy-bot-macro/: Cargo.toml
deffy-bot-macro/src/: lib.rs
deffy-bot-patreon-services/: Cargo.toml
deffy-bot-patreon-services/src/: api.rs  webhook.rs
deffy-bot-utils/: Cargo.toml
deffy-bot-utils/src/: builder_utils.rs  database.rs  lib.rs  wip_database.rs
deffy-bot-utils/src/event/: manager.rs
deffy-bot/src/: main.rs
deffy-bot/src/command/: claim_command.rs  command_registry.rs  download_command.rs  embed_command.rs  key_command.rs  manager.rs  mod.rs  modal_command.rs  moderate_command.rs  profile_command.rs  setup_command.rs  test_command.rs  verify_command.rs
deffy-bot/src/command/handler/: claim_command.rs  download_command.rs  mod.rs  moderate_command.rs  moderator_command.rs  profile_command.rs  setup_command.rs  test_command.rs  verify_command.rs  wip_command.rs
deffy-bot/src/command/message/: mod.rs  testcommand.rs
deffy-bot/src/command/system/: cooldown_state.rs  interaction_reply.rs  manager.rs  mod.rs
deffy-bot/src/event/: btn_event.rs  command_execute.rs  event_registry.rs  event_router.rs  manager.rs  mod.rs  modal_event.rs  select_menu_event.rs  start.rs  start_event.rs  webhook_event.rs
deffy-bot/src/event/api/: mod.rs  webhook_event.rs
handler_macro/: Cargo.toml
handler_macro/src/: lib.rs
