[workspace]
members = [
    "deffy-bot",
    "deffy-bot-macro",
    "deffy-bot-encryption",
    "deffy-bot-patreon-services"
    , "deffy-bot-utils"]
resolver = "3"

[workspace.dependencies]
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "current"}
tokio = { version = "1.46.1", features = ["full"] }
dotenv = "0.15.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19" , features = ["env-filter"] }
rbase64 = "2.0.3"
deffy-bot-patreon-services = { path = "deffy-bot-patreon-services"}
anyhow = "1.0.98"