[workspace]
members = [
    "deffy-bot",
    "deffy-bot-macro",
    "deffy-bot-encryption",
    "deffy-bot-patreon-services"
    , "deffy-bot-utils", "deffy-bot-http", "deffy-bot-localization"]
resolver = "3"

[workspace.dependencies]
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "current", features = ["full"] }
tokio = { version = "1.47.1", features = ["full"] }
dotenv = "0.15.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19" , features = ["env-filter"] }
rbase64 = "2.0.3"
deffy-bot-patreon-services = { path = "deffy-bot-patreon-services"}
anyhow = "1.0.99"
mongodb = { version = "3.2.4"   }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.142" }
chrono = { version = "0.4.41" }
axum = { version = "0.8.4", features = ["tokio","http1","macros"] }
once_cell = "1.19"
reqwest = { version = "0.12.23" }
