[package]
name = "deffy-bot-http"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
dotenv = {workspace = true}
tokio = {workspace = true}
anyhow = {workspace = true}

deffy-bot-patreon-services = {workspace = true}
