[package]
name = "deffy-bot-localization"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = {workspace = true}
tokio = {workspace = true}
serde_json = {workspace = true}
serde = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
once_cell = {workspace = true}
