[package]
name = "deffy-bot-utils"
version = "0.1.0"
edition = "2024"
authors = ["IN4MEZ"]

[dependencies]
serenity = {workspace = true}
deffy-bot-patreon-services = {workspace = true}
anyhow = {workspace = true}
tokio = {workspace = true}
mongodb = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
serde = { workspace = true}
serde_json = { workspace = true }

[lib]
name = "deffy_bot_utils"
path = "src/lib.rs"
