[package]
name = "deffybot"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = {workspace = true}
tokio = {  workspace = true }
dotenv = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
handler_macro = { path = "../handler_macro" }
inventory = "0.3.20"
once_cell = "1.19"
reqwest = { version = "0.12.22" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.130" }
rbase64 = { workspace = true }
deffy-bot-encryption = {path = "../deffy-bot-encryption"}
deffy-bot-patreon-services = {workspace = true}
deffy-bot-utils = { path = "../deffy-bot-utils"}