[package]
name = "deffybot"
version = "0.1.0"
edition = "2024"
authors = ["IN4MEZ"]

[dependencies]
axum = { version = "0.8.4", features = ["tokio","http1","macros"] }
serenity = {workspace = true}
tokio = {  workspace = true }
dotenv = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
deffy-bot-macro = { path = "../deffy-bot-macro" }
inventory = "0.3.20"
once_cell = "1.19"
reqwest = { version = "0.12.22" }
rbase64 = { workspace = true }
deffy-bot-encryption = {path = "../deffy-bot-encryption"}
deffy-bot-patreon-services = {workspace = true}
deffy-bot-utils = { path = "../deffy-bot-utils"}
anyhow = {workspace = true}
serde = {workspace = true}
serde_json ={ workspace = true }