[package]
name = "deffybot"
version = "0.1.0"
edition = "2024"
authors = ["IN4MEZ"]

[dependencies]
serenity = {workspace = true}
tokio = {  workspace = true }
dotenv = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
deffy-bot-macro = { path = "../deffy-bot-macro" }
rbase64 = { workspace = true }
deffy-bot-encryption = {path = "../deffy-bot-encryption"}
deffy-bot-patreon-services = {workspace = true}
deffy-bot-utils = { path = "../deffy-bot-utils"}
deffy-bot-http = { path = "../deffy-bot-http" }
deffy-bot-localization = { path = "../deffy-bot-localization" }
anyhow = {workspace = true}
serde = {workspace = true}
serde_json ={ workspace = true }
chrono ={ workspace = true }
once_cell = {workspace = true}
reqwest = {workspace = true}
inventory = { workspace = true }
console-subscriber = { workspace = true }